--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div className="container">
       <div id="root"></div>
     </div>
-    <script src="dist/bundle.js"></script>
+    <script src="static/bundle.js"></script>
   </body>
 </html>
